<?xml version="1.0"?>
<package format="3">
  <name>mpc_eval_msgs</name>
  <version>0.0.0</version>
  <description>The mpc_eval_msgs package</description>

  <!-- maintainer -->
  <maintainer email="mizuhoaoki1998@gmail.com">Mizuho Aoki</maintainer>

  <!-- license -->
  <license>MIT</license>

  <!-- dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

</package>
