<?xml version="1.0"?>
<package format="3">
  <name>map_visualizer</name>
  <version>0.0.0</version>
  <description>The map_visualizer package</description>

  <!-- maintainer -->
  <maintainer email="mizuhoaoki1998@gmail.com">Mizuho Aoki</maintainer>

  <!-- license -->
  <license>MIT</license>

  <!-- dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

</package>
