<?xml version="1.0"?>
<package format="3">
  <name>world_handler</name>
  <version>0.0.0</version>
  <description>make gazebo world and spawn a 4wids vehicle</description>

  <!-- maintainer -->
  <maintainer email="mizuhoaoki1998@gmail.com">Mizuho Aoki</maintainer>

  <!-- license -->
  <license>MIT</license>

  <!-- dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <!-- export gazebo asset paths -->
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}/world" />
  </export>

</package>
